--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,5 +1,5 @@
 .button {
-    background-color: cornflowerblue;
+    background-color:green;
     padding: 10px;
     border: none;
     border-radius: 5px;
