--- a/src/pages/style for pages/style.css
+++ b/src/pages/style for pages/style.css
@@ -1,45 +1,3 @@
-/* .homeimage{
-    margin-top: 10px;;
-    width: 30%;
-    height: 600px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-     border: 5px solid darkgreen; 
-} */
-
-
-/* .position{
-    position: absolute;
-    width: 30%;
-    height:30%;
-    background-color: azure;
-    color: darkgreen;
-    border: 1px solid black;
-    
-
-} */
-
-
-
-
-/* .content {
-    position: relative;
-    width: 95%;
-    height: 700px;
-    border: 3px solid #fa3939;
-}
-.position {
-    position: absolute;
-    top: 80px;
-    right: 10px;
-    width: 200px;
-    border: 3px solid blue;
-    align-self: center;
-}*/
-
-
-
 .text{
     display: flex;
     justify-content: space-between;
@@ -62,13 +20,16 @@
 
 
 .cardimage{
-    width:50%;
+    width:40%;
     /* position: absolute; */
     
     /* border-radius: 100%; */
     height:40%;
     align-self:center;
     margin-top: 10px;
+    margin-left: 4px;
+    margin-right: 4px;
+    
 }
 
 
@@ -102,10 +63,14 @@
 } */
 
 .card1{
-    width:300px;
-    height: 200px;
+    /* width:300px;
+    height: 200px; */
     color:black;
     padding: 30px;
+    background-color:aquamarine;
+    margin-left: 115px;
+    margin-right: 45px;
+
 }
 
 
@@ -114,7 +79,9 @@
 }
 
 
-
+.card4{
+    background-color: aquamarine;
+}
 
 
 
@@ -152,24 +119,161 @@
     font-size: 60px;
     width: 600px;
     height: 100%;
-  }
+    margin-bottom: 10px;
 
+  }
+/* 
   .aboutusinside{
 
-  }
+  } */
+
+.aboutusflex{
+    display:flex;
+    justify-content: space-between;
+    background-color: green;
+    padding: 30px;
+    color:aquamarine;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: 2px solid black;
+}
+
+
+.card2{
+    margin-left: 110px;
+}
+
+
+
+.signupfarmer{
+    display: flex;
+}
+
+
+.login{
+    display: flex;
+    box-sizing: border-box;
+    
+    padding: 100px;
+}
 
 
 
 
+.logcontent{
+    background-color: aquamarine;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    border: 25px solid green;
+    border-bottom: 2px;
+
+}
 
 
+.imageflex{
+    display: flex;
+}
+
+ 
+
+.loginimage{
+    width:300px;
+    height:300px;
+
+} 
+
+.topictextlogin{
+    margin-top: 2px;
+    padding-bottom:2px ;
+    color: green;
+    font-style:oblique;
+    /* text-shadow: 3px black ; */
+}
 
 
+.logimge{
+    width: 10%;
+    height:10% ;
+    border: 2px solid black;
+}
+
+.flexlogin{
+    text-align-last: center;
+}
+
+.mdbcontainer{
+    display: flex;
+    background-color: aquamarine;
+    padding: 20px;
+    border: 10px solid green;
+    
+}
+
+.paragraphlogin{
+    width:150px;
+    border: 3px solid black;
+    margin-left:110px ;
+}
 
 
+.center{
+    align-items: center;
+}
 
 
+.flexfeatured{
+    display: flex;
+    /* justify-content: space-between; */
+    
+    
+    
+}
+
+.img_featured{
+    width:300px;
+    height:300px;
+    margin-right: 10px;
+    margin-top:20px;
+    margin-left: 100px;
+}
+
+.flexfeatured2{
+    display:flex;
+    justify-content: space-between;
+    margin-left: 150px;
+    margin-right: 150px;
+   
+    color: aquamarine;
+}
+
+.featuredbg{
+    background-color: green;
+    height:500px;
+    width: 1360px;
+    border: 2px solid aquamarine;
+    margin-left: 15px;
+    margin-right: 20px;
+    
+
+}
 
 
+.featured{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: larger;
+    margin-top: 10px;
+    color:aquamarine;
+}
 
 
+.steps{
+    background-color: green;
+    height: 400px;
+    margin-left: 15px;
+    margin-right: 20px;
+    border: 2px solid aquamarine;
+}
