--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,9 +1,12 @@
 .button {
     background-color:green;
     padding: 10px;
-    border: none;
+    border: 3px solid black;
     border-radius: 5px;
     cursor: pointer;
-    color: white;
-    margin: 5px;
+    color:black;
+    /* margin: 5px; */
+    width:70px;
+    margin-left: 20px;
+
 }
