--- a/src/pages/style for pages/style.css
+++ b/src/pages/style for pages/style.css
@@ -296,3 +296,40 @@
 .buttonlog{
     width:60px;
 }
+
+.flex_contact{
+    display:flex;
+    background-color: green;
+    padding:20px;
+}
+
+
+.image_contact{
+    width:600px;
+    height:200px;
+    margin-left: 50px;
+    margin-top: 80px;
+    padding:20px;
+    background-color: aquamarine;
+    border: 2px solid black;
+
+}
+
+.cardimage8{
+    width:40px;
+    height:200px;
+    margin-top: 15px;
+    margin-right:15px;
+    
+}
+
+.card109{
+    color:black;
+    background-color: aquamarine;
+    margin-left:300px;
+
+}
+
+.flex{
+    display:flex;
+}
