--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -4,17 +4,12 @@
     margin-right: 20px;
 }
 
-
 .center1{
     margin-left: 20px;
-
 }
 
-
-
-
 .img247{
-    margin-left: 15px;
+    margin-left: 45px;
     width:150px;
     height: 150px;
     margin-top: 15px;
@@ -22,7 +17,55 @@
     margin-right: 15px;
 }
 
+.as1{
+    margin-top: 45px;
+    margin-left: 15px;
+    width:150px;
+    height: 150px;
+    margin-bottom: 15px;
+    margin-right: 15px;
+    
+}
 
+.as2{
+   
+    width:150px;
+    height: 180px;
+
+}
+
+.col_1{
+    border: 1px solidblack;
+}
+
+
+
+    .cardimage5{
+        width:30%;
+        /* position: absolute; */
+        
+        /* border-radius: 100%; */
+        height:40%;
+        align-self:center;
+        margin-top: 10px;
+        margin-left: 4px;
+        margin-right: 4px;
+}
+
+.btn1{
+    width:90px;
+    height:50px;
+    background-color: aquamarine;
+    color: green;
+    border-radius: 12px;
+    margin-top: 45px;
+    margin-right: 10px;
+    margin-left: 5px;
+}
+
+.down{
+    display: grid;
+}
 
 .flex36{
     display: flex;
